<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BDO</string>

    <string name="hello_world">Hello world!</string>

    <string name="edithint">请输入要写入的内容~</string>
    <string name="btnwrite">写入</string>
    <string name="btnclean">清空</string>
    <string name="nametitle">请输入文件名</string>
    <string name="detailtitle">请输入文件内容</string>
    <string name="btnread">读取文件内容</string>
    <string name="action_settings">Settings</string>
    <string name="btn_choose_a_file">Choose a file</string>
    <string name="title_nothing"></string>
    <string name="title_choose_file">Choose a file</string>
    <string name="btn_choose_a_folder">Choose a folder</string>
    <string name="title_choose_folder">Choose a folder</string>
    <string name="btn_choose_any_file">Choose any file</string>
    <string name="title_choose_multiple">Choose multiple files</string>
    <string name="btn_choose_multiple">Choose multiple files</string>
    <string name="title_choose_any_file">Choose any file</string>

    <string name="option_create_folder">New folder</string>
    <string name="options_delete">Delete</string>
    <string name="new_folder_cancel">Cancel</string>
    <string name="new_folder_ok">OK</string>
    <string name="btn_open_db">OPEN DATABASE</string>

    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>

    <string name="title_choose">Choose</string>
    <string name="title_choose_dict_file">Pick a dictionary</string>
    <string name="dialog_ok">Select</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="edit_terminal">Edit Terminal</string>
    <string name="edit_wave">Edit Wave</string>
    <string name="edit_emv">Edit EMV</string>
    <string name="edit_env">Edit ENV</string>
    <string name="edit_qrpay">Edit QRPAY</string>
    <string name="edit_eftsec">Edit EFTSEC</string>
    <string name="edit_ermtct">Edit ERMTCT</string>
    <string name="edit_menu">Edit Dynamic Menu</string>
    <string name="edit_quickmenu">Edit Quick Menu</string>
    <string name="exit">EXIT</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_cancel">CANCEL</string>
    <string name="_clear">CLEAR</string>
    <string name="_ok">OK</string>

    <string name="_1_qz">1 QZ</string>
    <string name="_2_abc">2 ABC</string>
    <string name="_7_prs">7 PRS</string>
    <string name="_4_ghi">4 GHI</string>
    <string name="_9_wxy">9 WXY</string>
    <string name="clr">CLEAR</string>
    <string name="_3_def">3 DEF</string>
    <string name="_5_jkl">5 JKL</string>
    <string name="_6_mno">6 MNO</string>
    <string name="_8_tuv">8 TUV</string>
    <string name="_zero">0</string>
    <string name="can">CANCEL</string>
    <string name="ibtn_Ok">OK</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="activity_login_enter_access_code">Enter Online Pin</string>
</resources>
