<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/logo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/darkblue"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_msg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/rndkbd_key_style"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_alphaString"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/rndkbd_key_style"
            android:gravity="center"
            android:inputType=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/keys_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btn_qz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_1_qz"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ghi"
            app:layout_constraintEnd_toStartOf="@+id/btn_abc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_abc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_2_abc"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_jkl"
            app:layout_constraintEnd_toStartOf="@+id/btn_def"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_qz"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_def"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_3_def"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_mno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_abc"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_ghi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_4_ghi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_prs"
            app:layout_constraintEnd_toStartOf="@+id/btn_jkl"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_qz" />

        <Button
            android:id="@+id/btn_jkl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_5_jkl"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_tuv"
            app:layout_constraintEnd_toStartOf="@+id/btn_mno"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_ghi"
            app:layout_constraintTop_toBottomOf="@+id/btn_abc" />

        <Button
            android:id="@+id/btn_mno"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_6_mno"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_wxy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_jkl"
            app:layout_constraintTop_toBottomOf="@+id/btn_def" />

        <Button
            android:id="@+id/btn_prs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_7_prs"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_blank1"
            app:layout_constraintEnd_toStartOf="@+id/btn_tuv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ghi" />

        <Button
            android:id="@+id/btn_tuv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_8_tuv"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_00"
            app:layout_constraintEnd_toStartOf="@+id/btn_wxy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_prs"
            app:layout_constraintTop_toBottomOf="@+id/btn_jkl" />

        <Button
            android:id="@+id/btn_wxy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_9_wxy"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_blank2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_tuv"
            app:layout_constraintTop_toBottomOf="@+id/btn_mno" />

        <Button
            android:id="@+id/btn_blank1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@color/beige"
            app:layout_constraintBottom_toTopOf="@+id/btn_can"
            app:layout_constraintEnd_toStartOf="@+id/btn_00"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_prs" />

        <Button
            android:id="@+id/btn_00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_gray"
            android:text="@string/_zero"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_clr"
            app:layout_constraintEnd_toStartOf="@+id/btn_blank2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_blank1"
            app:layout_constraintTop_toBottomOf="@+id/btn_tuv" />

        <Button
            android:id="@+id/btn_blank2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:background="@color/beige"
            app:layout_constraintBottom_toTopOf="@+id/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_00"
            app:layout_constraintTop_toBottomOf="@+id/btn_wxy" />

        <Button
            android:id="@+id/btn_clr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/clr_btn"
            android:text="@string/clr"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_can"
            app:layout_constraintTop_toBottomOf="@+id/btn_00" />

        <Button
            android:id="@+id/btn_can"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/cancel_btn"
            android:text="@string/can"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_clr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_blank1" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ok_btn"
            android:text="@string/ibtn_Ok"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_clr"
            app:layout_constraintTop_toBottomOf="@+id/btn_blank2" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>